[gd_scene load_steps=3 format=3 uid="uid://d1fat6bedgrnf"]

[ext_resource type="Script" uid="uid://c5ugs3kp5pfia" path="res://Scripts/UI/PauseMenu.gd" id="1_euejj"]
[ext_resource type="PackedScene" uid="uid://c7d1i25b3khwr" path="res://Scenes/settings.tscn" id="2_8m5yy"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euejj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -4000.0
offset_top = -4000.0
offset_right = 4000.0
offset_bottom = 4000.0
color = Color(0.0156863, 0.0156863, 0.0156863, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Settings/ShakeCheck")
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Settings/ShakeCheck")
theme_override_font_sizes/font_size = 48
text = "Restart"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Settings/ShakeCheck")
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Settings/LanguageDropdown")
focus_neighbor_bottom = NodePath("../Button2")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" parent="MarginContainer/VBoxContainer2" instance=ExtResource("2_8m5yy")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1

[node name="BlipSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.464

[node name="AcceptSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.464

[node name="BackSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.464

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button4" to="." method="_on_settings_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_quit_pressed"]
[connection signal="on_back_pressed" from="MarginContainer/VBoxContainer2/Settings" to="." method="_on_settings_on_back_pressed"]
